--- a/deploy.yml
+++ b/deploy.yml
@@ -1,1 +1,23 @@
+name: Build and Deploy OneonOne
+on:
+   push:
+     branches: [master]
 
+jobs:
+  deploy:
+    runs-on: ubundu 20.04
+    steps:
+        name: Deploy
+        with:
+           host: ${{secrets.SSH_HOST}}
+           key: ${{secrets.SSH_KEY}}
+           username: ${{secrets.SSH_USERNAME}}
+
+           script: |
+             mkdir oneonone
+             cd oneonone
+             git clone 
+             echo 'Deployment Successfull'
+           
+    
+     
