--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -11,6 +11,8 @@ jobs:
       - name: Deploy
         env:
           DEPLOY_KEY: ${{secrets.SSH_KEY}}
+          SSH_HOST: ${{secrets.SSH_HOST}}
+          USERNAME: ${{secrets.SSH_USERNAME}}
         run: |
           sudo mkdir /home/test
           cd /home/test
