--- a/deploy.yml
+++ b/deploy.yml
@@ -1,3 +1,28 @@
+name: Build and Deploy OneonOne
+
+on:
+  push:
+    branches: [main]
+
+jobs:
+  deploy:
+    runs-on: ubuntu-20.04
+    steps:
+      - name: Deploy
+        env:
+          DEPLOY_KEY: ${{secrets.SSH_KEY}}
+          SSH_HOST: ${{secrets.SSH_HOST}}
+          USERNAME: ${{secrets.SSH_USERNAME}}
+        run: |
+          sudo mkdir /home/test
+          cd /home/test
+          git clone git@github.com:adhishvariam/oneon1.git
+          echo 'Deployment Successful'
+
+
+           
+    
+     
 
 
            
