--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -16,6 +16,7 @@ jobs:
         run: |
           sudo mkdir /home/test
           cd /home/test
+          git clone git@github.com:adhishvariam/oneon1.git
           echo 'Deployment Successful'
 
 
